# comprez

./: .gitignore  Cargo.toml  README.md
benches/: compress_benchmark.rs
src/: comprezable.rs  error.rs  lib.rs  main.rs
src/signed/: mod.rs
src/unsigned/: compress.rs  decompress.rs  mod.rs
tests/: compress_test.rs
