[package]
name = "comprez"
authors = ["muhd.najid.nadri@gmail.com"]
repository = "https://github.com/Najidnadri/comprez"
version = "0.0.2"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["compress", "algorithm"]
description = "A library for compressing and decompressing big integers"
readme = "README.md"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
