[package]
name = "comprez"
authors = ["muhd.najid.nadri@gmail.com"]
repository = "https://github.com/Najidnadri/comprez"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["compress", "algorithm", "struct"]
description = "A library for compressing and decompressing structs"
readme = "README.md"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[dev-dependencies]
criterion = "0.3"
comprez_macro = { path= "../comprez_macro" }
rand = "0.8.4"

[[bench]]
name = "compress_benchmark"
harness = false